flux/apps/authentik/authentik_worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  namespace: authentik
  labels:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik
        app.kubernetes.io/component: worker
    spec:
      containers:
        - name: authentik
          image: registry.lab.reisman.org/proxy.ghcr.io/goauthentik/server:2023.4.1
          imagePullPolicy: IfNotPresent
          args: ["worker"]
