flux/apps/authentik/authentik_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  labels:
    app.kubernetes.io/name: authentik
spec:
  type: ClusterIP
  ports:
    - port: 9100
      name: http-metrics
      protocol: TCP
      targetPort: http-metrics
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: authentik
    app.kubernetes.io/component: "server"
